{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 172,
  "lineage": "2dcee22e-d7c4-043a-7e0f-8a6c7eb78851",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0698e75a80abe9610",
            "arn": "arn:aws:ec2:us-east-1:575530852213:elastic-ip/eipalloc-0698e75a80abe9610",
            "domain": "vpc",
            "id": "eipalloc-0698e75a80abe9610",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-204-222-221.compute-1.amazonaws.com",
            "public_ip": "52.204.222.221",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-nat-eip",
              "Project": "projeto-eks"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-nat-eip",
              "Project": "projeto-eks"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:internet-gateway/igw-0150dd6abaca02901",
            "id": "igw-0150dd6abaca02901",
            "owner_id": "575530852213",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-igw",
              "Project": "projeto-eks"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-igw",
              "Project": "projeto-eks"
            },
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0698e75a80abe9610",
            "association_id": "eipassoc-07ebc7a822eee0a46",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0da4f6eb0c6351fa5",
            "network_interface_id": "eni-032a55ddd84f37da7",
            "private_ip": "10.0.1.11",
            "public_ip": "52.204.222.221",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ae9be522f6eb2116",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-natgw",
              "Project": "projeto-eks"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-natgw",
              "Project": "projeto-eks"
            },
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0653628e50c37f2f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0da4f6eb0c6351fa5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0653628e50c37f2f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0653628e50c37f2f5"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0150dd6abaca02901",
            "id": "r-rtb-0e35e3610f23805391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e35e3610f2380539",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0e35e3610f2380539"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:route-table/rtb-0f613b6ef4a49026e",
            "id": "rtb-0f613b6ef4a49026e",
            "owner_id": "575530852213",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-rt-db",
              "Project": "projeto-eks"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-rt-db",
              "Project": "projeto-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "rtb-0f613b6ef4a49026e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:route-table/rtb-0653628e50c37f2f5",
            "id": "rtb-0653628e50c37f2f5",
            "owner_id": "575530852213",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-rt-private",
              "Project": "projeto-eks"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-rt-private",
              "Project": "projeto-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "rtb-0653628e50c37f2f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:route-table/rtb-0e35e3610f2380539",
            "id": "rtb-0e35e3610f2380539",
            "owner_id": "575530852213",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-rt-public",
              "Project": "projeto-eks"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-rt-public",
              "Project": "projeto-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "rtb-0e35e3610f2380539",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc388118db9c00aa",
            "region": "us-east-1",
            "route_table_id": "rtb-0f613b6ef4a49026e",
            "subnet_id": "subnet-0ae6e8a6f73ade598"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.db",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086055247ccfe15ba",
            "region": "us-east-1",
            "route_table_id": "rtb-0f613b6ef4a49026e",
            "subnet_id": "subnet-0d689230d8723c3a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.db",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fd9ebf6749056dc",
            "region": "us-east-1",
            "route_table_id": "rtb-0653628e50c37f2f5",
            "subnet_id": "subnet-0108c7d345e6393f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02df775d673e4f012",
            "region": "us-east-1",
            "route_table_id": "rtb-0653628e50c37f2f5",
            "subnet_id": "subnet-00c2e636ad1190448"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db4c7076d69df8ac",
            "region": "us-east-1",
            "route_table_id": "rtb-0e35e3610f2380539",
            "subnet_id": "subnet-0ae9be522f6eb2116"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073b0515bc14ca42c",
            "region": "us-east-1",
            "route_table_id": "rtb-0e35e3610f2380539",
            "subnet_id": "subnet-002395e16cca0cf77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:subnet/subnet-0ae6e8a6f73ade598",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae6e8a6f73ade598",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575530852213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-db-us-east-1a",
              "Project": "projeto-eks",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-db-us-east-1a",
              "Project": "projeto-eks",
              "Tier": "db"
            },
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "subnet-0ae6e8a6f73ade598",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:subnet/subnet-0d689230d8723c3a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d689230d8723c3a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575530852213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-db-us-east-1b",
              "Project": "projeto-eks",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-db-us-east-1b",
              "Project": "projeto-eks",
              "Tier": "db"
            },
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "subnet-0d689230d8723c3a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:subnet/subnet-0108c7d345e6393f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0108c7d345e6393f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575530852213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-private-us-east-1a",
              "Project": "projeto-eks",
              "Tier": "private",
              "kubernetes.io/cluster/projeto-eks-personal": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-private-us-east-1a",
              "Project": "projeto-eks",
              "Tier": "private",
              "kubernetes.io/cluster/projeto-eks-personal": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "subnet-0108c7d345e6393f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:subnet/subnet-00c2e636ad1190448",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c2e636ad1190448",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575530852213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-private-us-east-1b",
              "Project": "projeto-eks",
              "Tier": "private",
              "kubernetes.io/cluster/projeto-eks-personal": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-private-us-east-1b",
              "Project": "projeto-eks",
              "Tier": "private",
              "kubernetes.io/cluster/projeto-eks-personal": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "subnet-00c2e636ad1190448",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:subnet/subnet-0ae9be522f6eb2116",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae9be522f6eb2116",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "575530852213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-public-us-east-1a",
              "Project": "projeto-eks",
              "Tier": "public",
              "kubernetes.io/cluster/projeto-eks-personal": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-public-us-east-1a",
              "Project": "projeto-eks",
              "Tier": "public",
              "kubernetes.io/cluster/projeto-eks-personal": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "subnet-0ae9be522f6eb2116",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:subnet/subnet-002395e16cca0cf77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002395e16cca0cf77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "575530852213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-public-us-east-1b",
              "Project": "projeto-eks",
              "Tier": "public",
              "kubernetes.io/cluster/projeto-eks-personal": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-public-us-east-1b",
              "Project": "projeto-eks",
              "Tier": "public",
              "kubernetes.io/cluster/projeto-eks-personal": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cc8ab64c83762214"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "subnet-002395e16cca0cf77",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575530852213:vpc/vpc-0cc8ab64c83762214",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0223c9e1bd27cfaca",
            "default_route_table_id": "rtb-096e34b0adb436425",
            "default_security_group_id": "sg-0b34a5b4c8aa6ae78",
            "dhcp_options_id": "dopt-0e96629a5027ffcd1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc8ab64c83762214",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096e34b0adb436425",
            "owner_id": "575530852213",
            "region": "us-east-1",
            "tags": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-vpc",
              "Project": "projeto-eks"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "Terraform",
              "Name": "projeto-eks-personal-vpc",
              "Project": "projeto-eks"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "575530852213",
            "id": "vpc-0cc8ab64c83762214",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}